--- a/prepros-6.config
+++ b/prepros-6.config
@@ -24,10 +24,10 @@
         "css/layout/media.scss",
         "css/layout/layout.scss",
         "css/layout/normalize.scss",
+        "css/blocks/block-two.scss",
         "css/blocks/header.scss",
         "css/blocks/sidebar.scss",
         "css/blocks/block-one.scss",
-        "css/blocks/block-two.scss",
         "css/blocks/burgers.scss",
         "css/blocks/team.scss",
         "css/blocks/menu.scss",
@@ -36,12 +36,13 @@
         "css/blocks/form.scss",
         "css/blocks/contacts.scss",
         "css/blocks/fixed-menu.scss",
-        "css/blocks/hamburger-menu.scss"
+        "css/blocks/hamburger-menu.scss",
+        "css/blocks/hover-menu.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
