--- a/prepros-6.config
+++ b/prepros-6.config
@@ -37,7 +37,8 @@
         "css/blocks/contacts.scss",
         "css/blocks/fixed-menu.scss",
         "css/blocks/hamburger-menu.scss",
-        "css/blocks/hover-menu.scss"
+        "css/blocks/hover-menu.scss",
+        "css/blocks/form_modal.scss"
       ]
     }
   ],
